--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"apikey": "lcrAm0C3qJSPf8LD4PM0l4H07GS7dZ91", "tempUnit": "F", "cityName": "Tallahassee"}
+{"apikey": "Put your api key here", "tempUnit": "F", "cityName": "New York"}
