Fixed script to actually execute with i3blocks

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"apikey": "Put your api key here", "tempUnit": "F", "cityName": "New York"}
+{"apikey": "API_KEY_HERE", "tempUnit": "F", "cityName": "New York"}
